# tf_adaptor_valhalla

./: .gitignore  CMakeLists.txt  README.rst
app/: CMakeLists.txt  main.cpp
include/: _valhalla_config.h
include/valhalla/: abstract_model.h  federated_model.h  model.h  model_function.h  status_flag.h  tensor.h  type_flag.h
include/valhalla/internal/: model_function_impl.h  model_impl.h  tensor_impl.h
valhalla/: CMakeLists.txt  faldroid.cpp  model.cpp  model_function.cpp  model_function_impl.cpp  model_impl.cpp  status_flag.cpp  tensor.cpp  tensor_impl.cpp  type_flag.cpp
